hphp/hack/test/typecheck/type_structure/type_structure_typeconst.php.exp
ERROR: File "type_structure_typeconst.php", line 12, characters 13-23:
This shape doesn't have a field `classname` (Typing[4108])
  File "typestructure.hhi", line 57, characters 31-697:
  The shape is defined here
